# Nova

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  package-lock.json  package.json  pyproject.toml
nova/src/: CleanData.py  DataStructure.py
