[project]
name = "ml-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.63.0",
    "fastapi>=0.119.1",
    "gunicorn>=23.0.0",
    "langchain>=1.0.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pydantic>=2.12.3",
    "rdkit>=2025.9.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "loguru>=0.7.3",
    "pre-commit>=4.0.1",
]


[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
packages = ["nova"]

